deploy/kustomize/components/security/baseline-collector/baseline-collector-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: baseline-collector
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      app: baseline-collector

  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP

  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
        app: gigapipe
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP

  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
    toPorts:
    - ports:
      - port: "8123"
        protocol: TCP
